change title again

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Aplicacion de encabezados uwu</title>
+    <title>Nuevo encabezado prron de Sinaloa</title>
     <style>
       html {
         font-family: "Helvetica";
